--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,91 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url(../assets/fonts/Lato-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+body {
+    color: var(--primary-color);
+}
+
 
 .container {
     min-width: 20rem;
     max-width: 66.875rem;
     width: 100%;
     margin: 0 auto;
+}
+
+
+.slider-wrapper {
+    background: var(--slider-bg);
+    padding: 94px 0;
+}
+
+.slider {
+    display: flex;
+    flex-wrap: wrap;
+    color: var(--secondary-color);
+}
+
+.slider__column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 445px;
+    width: 50%;
+}
+
+.slider__title {
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 43px;
+    margin-bottom: 50px;
+}
+
+.slider__text {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 44px;
+}
+
+.app-download {
+    display: flex;
+    justify-content: space-between;
+    max-width: 134px;
+    width: 100%;
+    align-items: center;
+}
+
+.app-download__link:hover .app-download__icon {
+    transform: scale(1.3);
+    transition: ease-in-out 0.2s;
+}
+
+.app-download__icon {
+    transition: ease-in-out 0.2s;
+}
+
+.slider__column:first-child {
+    margin-right: 125px;
+}
+
+.slider__img {
+    border-radius: 15px;
+    transition: ease-in-out 0.2s;
+}
+
+.slider__img:hover {
+    transition: ease-in-out 0.2s;
+    transform: translateY(-5px);
+    box-shadow: 0px 11px 15px -11px var(--secondary-color);
 }
