--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 :root {
     --primary-color: #000;
     --secondary-color: #fff;
-    --slider-bg: #ED4C5C;
+    --primary-background: #fff;
+    --secondary-bg: #ED4C5C;
+    --border-color: #333;
 }
 
 * {
@@ -24,6 +26,7 @@ a {
 
 body {
     color: var(--primary-color);
+    font-family: "Lato", sans-serif;
 }
 
 
@@ -36,7 +39,7 @@ body {
 
 
 .slider-wrapper {
-    background: var(--slider-bg);
+    background: var(--secondary-bg);
     padding: 94px 0;
 }
 
@@ -46,22 +49,21 @@ body {
     color: var(--secondary-color);
 }
 
-.slider__column {
+.column {
     display: flex;
     flex-direction: column;
     justify-content: center;
     max-width: 445px;
-    width: 50%;
 }
 
-.slider__title {
+.title {
     font-size: 36px;
     font-weight: 600;
     line-height: 43px;
     margin-bottom: 50px;
 }
 
-.slider__text {
+.text {
     font-size: 14px;
     line-height: 20px;
     margin-bottom: 44px;
@@ -84,7 +86,7 @@ body {
     transition: ease-in-out 0.2s;
 }
 
-.slider__column:first-child {
+.column:first-child {
     margin-right: 125px;
 }
 
@@ -97,4 +99,98 @@ body {
     transition: ease-in-out 0.2s;
     transform: translateY(-5px);
     box-shadow: 0px 11px 15px -11px var(--secondary-color);
+}
+
+.feedback-wrapper {
+    padding: 117px 0 78px;
+}
+
+.feedback {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.column_feedback {
+    max-width: 434px;
+    width: 37%;
+}
+
+.column_form {
+    max-width: 540px;
+    width: 51%;
+}
+
+.text_feedback {
+    margin-bottom: 0;
+}
+
+.row {
+    margin-bottom: 24px;
+    width: 100%;
+}
+
+.row:last-child {
+    margin-bottom: 27px;
+}
+
+.row_flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.feedback__form {
+    width: 100%;
+}
+
+
+.feedback__input {
+    width: 100%;
+    height: 60px;
+    color: rgba(19, 39, 67, 0.5);
+    border-radius: 6px;
+    text-indent: 31px;
+    transition: 0.2s;
+    border: 1px solid var(--border-color);
+}
+
+.feedback__input:focus {
+    transform: scale(1.05);
+    transition: 0.2s;
+}
+
+.row_flex .feedback__input {
+    max-width: 255px;
+}
+
+.feedback__service {
+    background: url(../assets/img/arrow-down.svg) no-repeat 95% center;
+    appearance: none;
+    transform: none;
+}
+
+.feedback__service:focus {
+    transform: none;
+}
+
+.button {
+    min-width: 160px;
+    height: 50px;
+    padding: 16px 20px;
+    background: var(--secondary-bg);
+    color: var(--secondary-color);
+    text-transform: uppercase;
+    border-radius: 6px;
+    transition: ease-in-out 0.2s;
+    border: 0;
+}
+
+.button:hover {
+    transform: translateY(5px);
+    transition: ease-in-out 0.2s;
+}
+
+.button:focus {
+    outline: 0;
 }
